[package]
name = "jz368_week3_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc ={ version = "0.23.0"}
image ={ version = "0.24.5", features = ["png"] }
clap = { version = "4.1.4", features = ["derive"] }